[package]
name = "wispy"
version = "0.1.0"
edition = "2021"
description = "A modal terminal text editor with syntax highlighting, tabs, file browser, themes, and auto-completion"
license = "MIT"

[dependencies]
crossterm = "0.28"

[profile.release]
opt-level = "z"
strip = true 
lto = true
codegen-units = 1
panic = "abort"